enum-ptr-tests/tests/fail/discrinimant.stderr
error: EnumPtr doesn't support discriminants
 --> tests/fail/discrinimant.rs:9:5
  |
9 |     B(&'b i32) = 3,
  |     ^
